<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Flush"
        android:text="@string/generator"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="56sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#757575"
                android:hint="@string/enter_some_text"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="#fcfcfc"
                android:textSize="42sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Button
            android:id="@+id/choose_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#0e6b62"
            android:text="@string/generate_qr_code"
            android:textColor="#fcfcfc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Space
            android:layout_width="match_parent"


            android:layout_height="10dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="#009587"
            android:text="@string/generate"
            android:textColor="#fcfcfc" />

    </LinearLayout>

</LinearLayout>
