<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#757575"
    android:orientation="vertical"
    tools:context=".Image_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_action_on_image"
            android:textAlignment="center"
            android:textColor="#ffffff" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="30sp" />

        </ScrollView>


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#757575"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#009587"
            android:onClick="Back_to_menu"
            android:text="@string/Back" />

        <!-- <Button
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#0e6b62"
             android:onClick="SaveImage"
             android:text="@string/save_picture" />-->

    </LinearLayout>

</LinearLayout>